使用 Colaboratory 创建

--- a/StableDiffusionWEBUI.ipynb
+++ b/StableDiffusionWEBUI.ipynb
@@ -98,14 +98,17 @@
         "  models_path = models_path_gdrive\n",
         "  output_path = output_path_gdrive\n",
         "except:\n",
-        "  print(\"...error mounting drive or with drive path variables\")\n",
+        "  print(\"mounting drive error\")\n",
         "  exit()\n",
         "\n",
         "os.makedirs(models_path, exist_ok=True)\n",
         "os.makedirs(output_path, exist_ok=True)\n",
         "\n",
         "print(f\"models_path: {models_path}\")\n",
-        "print(f\"output_path: {output_path}\")"
+        "print(f\"output_path: {output_path}\")\n",
+        "copy_model_path = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
+        "os.makedirs(copy_model_path, exist_ok=True)\n",
+        "print(f\"model_copy_to: {copy_model_path}\")"
       ],
       "metadata": {
         "cellView": "form",
@@ -115,14 +118,25 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Copy model"
+      ],
+      "metadata": {
+        "id": "B5XygMHXnXEi"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!cp /content/drive/MyDrive/AI/models/animefull-final-pruned.ckpt /content/stable-diffusion-webui/model.ckpt"
+        "!cp /content/drive/MyDrive/AI/models/animefull-final-pruned.ckpt /content/stable-diffusion-webui/models/Stable-diffusion/animefull-final-pruned.ckpt\n",
+        "!cp /content/drive/MyDrive/AI/models/animevae.pt /content/stable-diffusion-webui/models/Stable-diffusion/animefull-final-pruned.vae.pt\n",
+        "!ls /content/stable-diffusion-webui/models/Stable-diffusion/*"
       ],
       "metadata": {
         "id": "0TFmHnJVBRI1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,15 +146,6 @@
       ],
       "metadata": {
         "id": "Q-5L8Kb6_Q5X"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Voldy doesn't explian what this does but it appears to replace the prior dependencies section, saving a few lines lmao "
-      ],
-      "metadata": {
-        "id": "v2kY0Z05DwIN"
       }
     },
     {
@@ -201,7 +206,7 @@
       "cell_type": "code",
       "source": [
         "#@markdown **Copy output to Google Drive (Optional)**\n",
-        "copy_to_google_drive = True #@param {type:\"boolean\"}\n",
+        "copy_to_google_drive = False #@param {type:\"boolean\"}\n",
         "\n",
         "from distutils.dir_util import copy_tree\n",
         "\n",
@@ -209,9 +214,10 @@
         "  copy_tree(\"/content/stable-diffusion-webui/outputs\", \"/content/drive/MyDrive/AI/StableDiffusion\")"
       ],
       "metadata": {
-        "id": "DwFvGJiYelke"
+        "id": "DwFvGJiYelke",
+        "cellView": "form"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     }
   ]
