--- a/StableDiffusionWEBUI.ipynb
+++ b/StableDiffusionWEBUI.ipynb
@@ -60,8 +60,9 @@
     {
       "cell_type": "code",
       "source": [
+        "%cd /content\n",
         "!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
-        "%cd stable-diffusion-webui\n",
+        "%cd /content/stable-diffusion-webui\n",
         "!git pull"
       ],
       "metadata": {
@@ -151,7 +152,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd stable-diffusion-webui\n",
+        "%cd /content/stable-diffusion-webui\n",
         "!COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py"
       ],
       "metadata": {
@@ -217,7 +218,7 @@
         "id": "DwFvGJiYelke",
         "cellView": "form"
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": []
     }
   ]
